feat: udistrital/sga_documentacion#353 se realizan los cambios en la bd previstos mediante migrations
