# swagger/swagger.json
@@ -15,6 +15,179 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/automatizacion/": {
+            "get": {
+                "tags": [
+                    "automatizacion"
+                ],
+                "description": "get Automatizacion",
+                "operationId": "AutomatizacionController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Automatizacion"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "automatizacion"
+                ],
+                "description": "create Automatizacion",
+                "operationId": "AutomatizacionController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Automatizacion content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Automatizacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.Automatizacion"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/automatizacion/{id}": {
+            "get": {
+                "tags": [
+                    "automatizacion"
+                ],
+                "description": "get Automatizacion by id",
+                "operationId": "AutomatizacionController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Automatizacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "automatizacion"
+                ],
+                "description": "update the Automatizacion",
+                "operationId": "AutomatizacionController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Automatizacion content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Automatizacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Automatizacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "automatizacion"
+                ],
+                "description": "delete the Automatizacion",
+                "operationId": "AutomatizacionController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
         "/calendario/": {
             "get": {
                 "tags": [
@@ -2558,29 +2731,57 @@
         }
     },
     "definitions": {
-        "66026.\u003cnil\u003e.EncargadoEvento": {
+        "70849.\u003cnil\u003e.EncargadoEvento": {
             "title": "EncargadoEvento",
             "type": "object"
         },
-        "66064.\u003cnil\u003e.TipoPublico": {
+        "70887.\u003cnil\u003e.TipoPublico": {
             "title": "TipoPublico",
             "type": "object"
         },
-        "66183.\u003cnil\u003e.EncargadoEvento": {
+        "71006.\u003cnil\u003e.EncargadoEvento": {
             "title": "EncargadoEvento",
             "type": "object"
         },
-        "66229.\u003cnil\u003e.TipoPublico": {
+        "71052.\u003cnil\u003e.TipoPublico": {
             "title": "TipoPublico",
             "type": "object"
         },
-        "66271.\u003cnil\u003e.EncargadoEvento": {
+        "71094.\u003cnil\u003e.EncargadoEvento": {
             "title": "EncargadoEvento",
             "type": "object"
         },
-        "66317.\u003cnil\u003e.TipoPublico": {
+        "71140.\u003cnil\u003e.TipoPublico": {
             "title": "TipoPublico",
             "type": "object"
+        },
+        "models.Automatizacion": {
+            "title": "Automatizacion",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CalendarioEventoId": {
+                    "$ref": "#/definitions/models.CalendarioEvento"
+                },
+                "EjecucionUnica": {
+                    "type": "boolean"
+                },
+                "Endpoint": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
         },
         "models.Calendario": {
             "title": "Calendario",
@@ -2626,6 +2827,9 @@
                     "type": "integer",
                     "format": "int64"
                 },
+                "MultiplePeriodoId": {
+                    "type": "string"
+                },
                 "Nivel": {
                     "type": "integer",
                     "format": "int64"
@@ -2647,6 +2851,9 @@
                     "type": "boolean"
                 },
                 "AplicaEdicionActividades": {
+                    "type": "boolean"
+                },
+                "Automatizacion": {
                     "type": "boolean"
                 },
                 "DependenciaId": {
@@ -3024,11 +3231,10 @@
                     "$ref": "#/definitions/models.CalendarioEvento"
                 },
                 "EncargadosEvento": {
-                    "$ref": "#/definitions/66026.\u003cnil\u003e.EncargadoEvento"
+                    "$ref": "#/definitions/70849.\u003cnil\u003e.EncargadoEvento"
                 },
                 "TiposPublico": {
-                    "$ref": "#/definitions/66064.\u003cnil\u003e.TipoPublico"
-
+                    "$ref": "#/definitions/70887.\u003cnil\u003e.TipoPublico"
                 }
             }
         },
@@ -3044,16 +3250,16 @@
                     "$ref": "#/definitions/models.CalendarioEvento"
                 },
                 "EncargadosEvento": {
-                    "$ref": "#/definitions/66183.\u003cnil\u003e.EncargadoEvento"
+                    "$ref": "#/definitions/71006.\u003cnil\u003e.EncargadoEvento"
                 },
                 "EncargadosEventoBorrados": {
-                    "$ref": "#/definitions/66271.\u003cnil\u003e.EncargadoEvento"
+                    "$ref": "#/definitions/71094.\u003cnil\u003e.EncargadoEvento"
                 },
                 "TiposPublico": {
-                    "$ref": "#/definitions/66229.\u003cnil\u003e.TipoPublico"
+                    "$ref": "#/definitions/71052.\u003cnil\u003e.TipoPublico"
                 },
                 "TiposPublicoBorrados": {
-                    "$ref": "#/definitions/66317.\u003cnil\u003e.TipoPublico"
+                    "$ref": "#/definitions/71140.\u003cnil\u003e.TipoPublico"
                 }
             }
         }
@@ -3122,6 +3328,10 @@
         {
             "name": "calendario_evento_tipo_publico",
             "description": "CalendarioEventoTipoPublicoController operations for CalendarioEventoTipoPublico\n"
+        },
+        {
+            "name": "automatizacion",
+            "description": "AutomatizacionController operations for Automatizacion\n"
         }
     ]
 }
